# test-package

./: README.md  pyproject.toml  setup.py
core/: __init__.py  sample.py
